<resources>
    <string name="app_name">signup&amp;signin</string>

    <string name="sign_in_register_button">Register now</string>
    <string name="sign_in_login_button">Login</string>
    <string name="sign_in_input_password">Password</string>
    <string name="sign_in_input_email">E-mail ID</string>

    <string name="sign_up_title">Create Account</string>
    <string name="sign_up_subtitle">Please enter your personal info</string>
    <string name="sign_up_input_name">Name</string>
    <string name="sign_up_input_last_name">Last Name</string>
    <string name="sign_up_input_phone">Phone Number</string>
    <string name="sign_up_input_email">E-mail</string>
    <string name="sign_up_input_password">Password</string>
    <string name="sign_up_input_confirm_password">Confirm your Password</string>
    <string name="sign_up_register_button">Create</string>

    <string name="generic_error">An error occurred while loading data</string>
    <string name="generic_email_error">Invalid e-mail</string>
</resources>