<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_purple">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/SignUp.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_48dp"
                    android:text="@string/sign_up_title" />

                <TextView
                    style="@style/SignUp.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/sign_up_subtitle" />

                <EditText
                    android:id="@+id/input_name"
                    style="@style/SignIn.InputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_36dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:background="@drawable/bg_edittext_default"
                    android:hint="@string/sign_up_input_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/input_lastName"
                    style="@style/SignIn.InputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:background="@drawable/bg_edittext_default"
                    android:hint="@string/sign_up_input_last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/input_phone"
                    style="@style/SignIn.InputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:background="@drawable/bg_edittext_default"
                    android:hint="@string/sign_up_input_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    app:met_mask="+55(##) ####-####"/>

                <EditText
                    android:id="@+id/input_email"
                    style="@style/SignIn.InputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:background="@drawable/bg_edittext_default"
                    android:hint="@string/sign_up_input_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/input_password"
                    style="@style/SignIn.InputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:background="@drawable/bg_edittext_default"
                    android:hint="@string/sign_up_input_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/input_confirm_password"
                    style="@style/SignIn.InputText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:background="@drawable/bg_edittext_default"
                    android:hint="@string/sign_up_input_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/signup_button"
                    style="@style/SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_36dp"
                    android:background="@drawable/bg_button_default_selectable"
                    android:enabled="false"
                    android:text="@string/sign_up_register_button"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
